2009-12-10  Vladimir Serbinenko  <phcoder@gmail.com>

	Eliminate NTFS 4Gib barrier.

	* fs/ntfs.c (read_attr): Use grub_disk_addr_t and grub_size_t.
	(read_run_data): Likewise.
	(grub_ntfs_read_run_list): Likewise.
	(grub_ntfs_read_block): Likewise.
	(grub_ntfs_iterate_dir): Likewise.
	(read_mft): Likewise.
	(read_data): Likewise.
	Use COM_LOG_LEN.
	* fs/ntfscomp.c (read_block): Cast ctx->target_vcn & 0xF to unsigned
	to avoid 64-bit division
	* include/grub/ntfs.h (COM_LOG_LEN): New definition.
	(grub_ntfs_rlst): Use grub_disk_addr_t.

2009-12-10  Vladimir Serbinenko  <phcoder@gmail.com>

	Eliminate grub-fstest 4Gib barrier.

	* util/grub-fstest.c (skip, leng): Use grub_disk_addr_t.
	(read_file): Fix error reporting.

2009-12-10  Vladimir Serbinenko  <phcoder@gmail.com>

	Eliminate hexdump 4Gib barrier.

	* commands/hexdump.c (grub_cmd_hexdump): Use grub_disk_addr_t.
	* lib/arg.c (grub_arg_parse): Use grub_strtoull.

2009-12-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* kern/device.c (grub_device_iterate): Ignore errors during first scan.
	Fixes amarsh bug.

2009-12-09  Bruce Dubbs  <bruce.dubbs@gmail.com>

	Remove miscellaneous files in distclean target.

	* Makefile.in: Remove docs/{grub.info,version.texi,stamp-vti}

2009-12-09  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkconfig_lib.in: Don't set grub_probe or grub_mkrelpath
	if they're already set.  This resolves the conflict between my
	grub-install change on 2009-10-06 and Felix' change on 2009-11-11,
	fixing the --grub-probe option again.
	* util/sparc64/ieee1275/grub-install.in: Revert the last piece of my
	change on 2009-10-06, so that we now once again source
	`${libdir}/grub/grub-mkconfig_lib' after options have been parsed.

2009-12-08  Robert Millan  <rmh.grub@aybabtu.com>

	* conf/common.rmk [sparc64-ieee1275] (grub_mkdevicemap_SOURCES): Use
	`util/ieee1275/ofpath.c' and `util/ieee1275/devicemap.c' instead of
	`util/devicemap.c'.

2009-12-08  Carles Pina i Estany  <carles@pina.cat>
